# EWAN

./: .gitignore  .gitmodules  CMakeLists.txt
.github/: dependabot.yml
.github/workflows/: Build.yml  Libs.AngelScript.yml  Schedule.yml
CMake/: CompileTarget.cmake  DisableInSourceBuild.cmake  Embed.cmake  Embed.hpp.in
Embed/: CMakeLists.txt
Libs/: CMakeLists.txt
Source/: .clang-format  App.cpp  App.hpp  CMakeLists.txt  Content.cpp  Content.hpp  GameInfo.cpp  GameInfo.hpp  Generator.hpp  Log.cpp  Log.hpp  Main.cpp  Script.API.cpp  Script.Builder.cpp  Script.Callback.cpp  Script.Event.cpp  Script.UserData.cpp  Script.cpp  Script.hpp  Settings.hpp  Text.cpp  Text.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp
Source/Libs/: AngelScript.hpp  JSON.cpp  JSON.hpp  SFML.hpp
Test/: CMakeLists.txt  Test.hpp
Test/Content/: Attach.cpp  Detach.cpp  Move.cpp  New.cpp
Test/Content/Cache/: Attach.cpp  Delete.cpp  Detach.cpp  Move.cpp  New.cpp
